# ai-audio-fingerprint-remover

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SAFETY.md  pyproject.toml  requirements.txt
audio_quality_humanizer/: __init__.py  __version__.py  cli.py  safety.py  visualization_artifacts.py
deployment/: README.md  privacy-beta-checklist.md  private-beta-workflows.md  rollback.md  security-checklist.md  server-rollout.md  smoke-test.md
examples/: validation_manifest.example.json
project_reborn/: README.md
scripts/: private-beta-smoke.sh
tests/: test_analyze.py  test_batch.py  test_candidate_reality_gate.py  test_compare.py  test_doctor.py  test_humanize.py  test_legacy_import_guard.py  test_metadata_cleaner.py  test_packaging.py  test_preset_eval.py  test_presets.py  test_processing_guardrails.py  test_processing_safety.py  test_project_reborn.py  test_project_reborn_audit.py  test_project_reborn_top5_plan.py  test_reborn_005_deep_review.py  test_reborn_025_deep_review.py  test_release_check.py  test_release_notes.py  test_root_cleanliness.py  test_safety_scan.py  test_unsafe_wording.py  test_v0_10_design_spec.py  test_v0_11_compare_metrics_design.py  test_v0_11_docs_polish.py  test_v0_12_visualization_artifacts_design.py  test_v0_13_private_web_backend_design.py  test_validation_manifest.py  test_validation_performance.py  test_validation_runner.py  test_validation_status.py  test_version.py  test_visualization_artifacts.py  test_web_upload_visualization_mvp_design.py
tools/: build_check.py  cli_smoke.py  project_reborn_audit.py  safety_scan.py  (+2 more)
(+80 files in other folders)
