[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-quality-humanizer"
version = "0.10.0"
description = "Local CLI for audio metadata inspection, metadata cleaning, and provenance-risk reporting."
requires-python = ">=3.10"
dependencies = [
  "mutagen>=1.45.0",
  "numpy>=1.26.0",
  "soundfile>=0.10.3"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0"
]
dev = [
  "build>=1.0.0"
]

[project.scripts]
ai-humanizer = "audio_quality_humanizer.cli:main"

[tool.setuptools.packages.find]
include = ["audio_quality_humanizer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
